--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <!-- build:js FullScreenMario.min.js -->
         <script src="GameStartr/EightBittr/EightBittr.js"></script>
         <script src="GameStartr/GameStartr.js"></script>
+        <script src="GameStartr/util.js"></script>
         <script src="GameStartr/AudioPlayr/AudioPlayr.js"></script>
         <script src="GameStartr/ChangeLinr/ChangeLinr.js"></script>
         <script src="GameStartr/FPSAnalyzr/FPSAnalyzr.js"></script>
