--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <small><em>Mario, Super Mario Brothers, and all associated games and media are property of Nintendo and/or Nintendo of America Inc., and are protected by United States and international copyright, trademark and other intellectual property laws.</em></small>
         </section>
 
-        <script src="generateMapFromSAT.js"></script>
+        <script src="generateSymbolicMapFromSAT.js"></script>
+        <script src="generateGadgetMapFromSymbolicMap.js"></script>
 
         <!-- build:js FullScreenMario.min.js -->
         <script src="GameStartr/EightBittr/EightBittr.js"></script>
