--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <header>
+<!--         <header>
             <img src="Theme/Header.gif" alt="FullScreenMario.com" />
             <div id="header-right">
                 <a class="hoverable" target="_blank" href="https://twitter.com/FullScreenMario">
@@ -27,7 +27,7 @@
                     <img id="facebook" src="Theme/Facebook.png" alt="Facebook" />
                 </a>
             </div>
-        </header>
+        </header> -->
 
         <section id="game">
             <!-- FSM.UserWrapper will fill out this section... -->
@@ -38,25 +38,19 @@
         </section>
 
         <section id="explanation" class="section-text">
-            FullScreenMario is a free HTML5 remake of Nintendo's original Super Mario Bros.
-            It includes the original 32 levels, a random map generator, a <!-- social --> level editor, and over a dozen custom mods.
+            Mario 3SAT takes one of the <a href="https://en.wikipedia.org/wiki/Boolean_satisfiability_problem">most difficult computational problems</a> and reduces it to a playable level of Super Mario Bros.
         </section>
 
         <section id="social" class="section-text">
-            You may <a class="link-github" href="http://www.github.com/FullScreenShenanigans/FullScreenMario">download the game for yourself</a> from GitHub, the location of Full Screen Mario's open source project.
-            Be sure to get the latest news on our <a class="link-facebook" href="http://www.facebook.com/FullScreenMario">Facebook</a> and <a class="link-twitter" href="http://www.twitter.com/FullScreenMario">Twitter</a> too!
+            Special thanks to Josh Goldberg, and <a href="http://www.github.com/FullScreenShenanigans/FullScreenMario">FullScreenMario</a>, as well as to Nintendo for originally creating the Mario series.
         </section>
 
-        <section id="credits" class="section-text">
-            FullScreenMario was made possible first and foremost by Nintendo, who originally created Mario and has since maintained the series.
-            It would also not have been possible without the dedicated efforts of the Mario fan community over the past three decades, in particular <a href="http://www.themushroomkingdom.net/">themushroomkingdom.net</a>.
-        </section>
-
+<!-- 
         <section id="hangar96" class="section-text">
             <a href="http://marathon.sourceforge.net" alt="Escape will make me god.">
                 <img class="hoverable" src="Theme/Aleph One.png" />
             </a>
-        </section>
+        </section> -->
 
         <section id="legal" class="section-text">
             <small><em>Mario, Super Mario Brothers, and all associated games and media are property of Nintendo and/or Nintendo of America Inc., and are protected by United States and international copyright, trademark and other intellectual property laws.</em></small>
