Added form for 3SAT string to HTML

--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
             <!-- FSM.UserWrapper will fill out this section... -->
         </section>
 
+        <section id="sat" class="section-text">
+            Enter a boolean expression in <a href="https://en.wikipedia.org/wiki/Conjunctive_normal_form">CNF</a>, using parentheses to mark or-clauses, along with the &, |, and ! characters as desired.
+
+            <form>
+                <input type="text" name="sat_string" style='font-size: 20px; margin-bottom: 10px; margin-top: 25px;' size="40"> <br>
+                <input type="submit" style="font-size: 18px; font-family: 'Times New Roman';" value="Load Level">
+            </form>
+        </section>
+
         <section id="explanation" class="section-text">
             Mario 3SAT takes one of the <a href="https://en.wikipedia.org/wiki/Boolean_satisfiability_problem">most difficult computational problems</a> and reduces it to a playable level of Super Mario Bros.
         </section>
 
         <section id="social" class="section-text">
-            Special thanks to Josh Goldberg, and <a href="http://www.github.com/FullScreenShenanigans/FullScreenMario">FullScreenMario</a>, as well as to Nintendo for originally creating the Mario series.
+            Special thanks to Josh Goldberg and <a href="http://www.github.com/FullScreenShenanigans/FullScreenMario">FullScreenMario</a>, as well as to Nintendo for originally creating the Mario series.
         </section>
 
 <!-- 
